# codex

./: README.md  marketplace.json
atlaso/: .mcp.json  AGENTS.md
atlaso/.codex-plugin/: plugin.json
atlaso/hooks/: _resolve.sh  capture.sh  hooks.json  recall.sh  start.sh
atlaso/runtime/: pyproject.toml
atlaso/runtime/atlaso_client/: __init__.py  _ambient.py  _capture.py  _credential.py  _flush.py  _project.py  _render.py  _telemetry.py  api.py  cache.py  config.py  connect.py  core.py  state.py
atlaso/runtime/atlaso_codex/: __init__.py  _shim.py  ambient.py  capture.py  notice.py  recall.py  start.py  sync.py  transcript.py
atlaso/runtime/atlaso_mcp/: __init__.py  server.py  tools.py
atlaso/skills/memory/: SKILL.md
