# Vendored runtime for the Atlaso Codex plugin. `uv run` resolves a managed Python
# + these deps (cached) so the plugin is self-contained. `package = false`: this
# isn't a buildable package, just the dep env; the vendored atlaso_* packages sit
# alongside and are imported via `python -m` (cwd on sys.path).
[project]
name = "atlaso-runtime"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27,<0.29",
    "mcp[cli]>=1.27.0",
]

[tool.uv]
package = false
